--- a/Recognizer/packages.config
+++ b/Recognizer/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CognitiveServices.Speech" version="1.18.0" targetFramework="net472" />
+  <package id="VisioForge.DotNet.Core.TRIAL" version="14.1.23" targetFramework="net472" />
 </packages>
