--- a/Recognizer/packages.config
+++ b/Recognizer/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CognitiveServices.Speech" version="1.18.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Json" version="4.3.0" targetFramework="net472" />
   <package id="VisioForge.DotNet.Core.TRIAL" version="14.1.23" targetFramework="net472" />
 </packages>
