--- a/Recognizer/Recognizer.csproj
+++ b/Recognizer/Recognizer.csproj
@@ -128,11 +128,11 @@
     <Compile Include="Form1%28methods%29.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Form1%28controls%29.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Form1%28controls%29.Designer.cs">
+      <DependentUpon>Form1%28controls%29.cs</DependentUpon>
     </Compile>
     <Compile Include="HistoryForm.cs">
       <SubType>Form</SubType>
@@ -145,8 +145,8 @@
     <Compile Include="Resultator.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Translator.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Form1%28controls%29.resx">
+      <DependentUpon>Form1%28controls%29.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HistoryForm.resx">
       <DependentUpon>HistoryForm.cs</DependentUpon>
